--- a/PingMe Up/Views/StoryBoards/Base.lproj/Main.storyboard
+++ b/PingMe Up/Views/StoryBoards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Z3M-p7-ul1">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversations View Controller-->
+        <!--Chats-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversationsViewController" customModule="PingMe_Up" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,10 +19,96 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Chats" id="WbB-GE-zvI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="4"/>
+            <point key="canvasLocation" x="135" y="1305"/>
+        </scene>
+        <!--Chats-->
+        <scene sceneID="V2y-nL-fDy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dAX-Qn-bwV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chats" id="rTx-TX-ldw"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="pjs-CB-eGS">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Dqa-DA-nzB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E2K-5D-Zmi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="134" y="500"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="TUG-UQ-Yb9">
+            <objects>
+                <tabBarController id="Z3M-p7-ul1" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LJg-G0-oSn">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="dAX-Qn-bwV" kind="relationship" relationship="viewControllers" id="WOJ-fm-h8g"/>
+                        <segue destination="Ai2-MD-JZT" kind="relationship" relationship="viewControllers" id="e8u-Le-yF9"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UHu-UT-Eul" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="978" y="-71"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="oAg-6R-UDq">
+            <objects>
+                <navigationController id="Ai2-MD-JZT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="u0T-Rt-cNL"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="k2D-QS-ztc">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="uRY-RF-O6S" kind="relationship" relationship="rootViewController" id="wju-tf-syF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tb4-oj-s5n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1882" y="500"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="GoR-uW-Z09">
+            <objects>
+                <viewController id="uRY-RF-O6S" customClass="ProfileViewController" customModule="PingMe_Up" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cvs-Wz-ian">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zGc-5B-aqV">
+                                <rect key="frame" x="0.0" y="155" width="393" height="614"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gY8-NT-VVZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zGc-5B-aqV" firstAttribute="leading" secondItem="gY8-NT-VVZ" secondAttribute="leading" id="Kjr-MM-Hzg"/>
+                            <constraint firstItem="zGc-5B-aqV" firstAttribute="top" secondItem="gY8-NT-VVZ" secondAttribute="top" id="Z4D-7L-FtT"/>
+                            <constraint firstItem="gY8-NT-VVZ" firstAttribute="bottom" secondItem="zGc-5B-aqV" secondAttribute="bottom" id="ZYi-Zf-f2w"/>
+                            <constraint firstItem="gY8-NT-VVZ" firstAttribute="trailing" secondItem="zGc-5B-aqV" secondAttribute="trailing" id="sbs-nM-ogg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="TRw-eK-sJs"/>
+                    <connections>
+                        <outlet property="tableView" destination="zGc-5B-aqV" id="b8c-h8-71p"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vZ8-Tg-OrM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1882" y="1305"/>
         </scene>
     </scenes>
     <resources>
